--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@saeris/vue-spinners": "^1.0.8",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.7"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
